# xeus-python

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  conanfile.py  env.txt  pyproject.toml  requirements.txt  xeus-pythonConfig.cmake.in
.github/lib/: boilerplate.cmake  pyproject.toml
.github/lib/cmake/: conan.cmake  flags.cmake  packaging.cmake
.github/lib/lmxcpp/: __main__.py  checks.py  ci.py  clang_tidy_cache.py  conan_install.py  conan_tools.py  configure.py  decorators.py  doctor.py  macos.py
.github/lib/lmxcpp/.conan2/: remotes.json
.github/lib/lmxcpp/.conan2/extensions/generators/: lmx_boilerplate.py
.github/lib/lmxcpp/.conan2/extensions/hooks/: hook_ccache.py
.github/lib/lmxcpp/.conan2/extensions/plugins/compatibility/: compatibility.py
.github/workflows/: main.yml
include/xeus-python/: xdebugger.hpp  xeus_python_config.hpp  xinterpreter.hpp  xinterpreter_raw.hpp  xinterpreter_wasm.hpp  xpaths.hpp  xtraceback.hpp  xutils.hpp
src/: main.cpp  main_wasm.cpp  xcomm.cpp  xcomm.hpp  xdebugger.cpp  xdebugpy_client.cpp  xdebugpy_client.hpp  xdisplay.cpp  xdisplay.hpp  xinput.cpp  xinput.hpp  xinspect.cpp  xinspect.hpp  xinternal_utils.cpp  xinternal_utils.hpp  xinterpreter.cpp  xinterpreter_raw.cpp  xinterpreter_wasm.cpp  xkernel.cpp  xkernel.hpp  xpaths.cpp  xpython_extension.cpp  xstream.cpp  xstream.hpp  xtraceback.cpp  xutils.cpp
test/: CMakeLists.txt  main.cpp  test_debugger.cpp  test_kernel.cpp  test_multi_kernel.cpp  xeus_client.cpp  xeus_client.hpp
